Fixed overflow

--- a/frontend/src/Components/Dashboard/Dashboard.css
+++ b/frontend/src/Components/Dashboard/Dashboard.css
@@ -207,6 +207,10 @@
     margin-left: 2%;
 }
 
+.over {
+    overflow: hidden;
+}
+
 .no-meetings {
     text-align: center;
     font-size: 2vw;
